# rave

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  analyzer.py  bridge.py  clean.sh  effect.csd  effect.py  hello.csd  pyproject.toml  sine.csd  timer.py  utils.py
rave/: analyser.py  analyzer.csd  analyzer.py  config.py  constants.py  effect.csd  effect.py  env.py  inference.py  mediator.py  metrics.py  musician.py  osc_client.py  osc_receiver.csd  osc_receiver.py  osc_sender.py  osc_server.csd  osc_server.py  player.py  sound.py  standardizer.py  template_handler.py  timer.py  tools.py  train.py  utils.py
rave/bounces/: readme.md
rave/configs/: .gitignore  chords.toml  chords_formant.toml  chords_mfcc.toml  chords_mfcc_amen.toml  chords_mfcc_noise_to_chords.toml  default.toml  few_hiddens_rms.toml  no_hiddens.toml  no_hiddens_rms.toml  one_hidden_all.toml  one_hidden_rms.toml  only_rms.toml  rms.toml  sine.toml
rave/csd/: .gitignore
rave/effects/: analyser.csd.jinja2  analyzer.csd.jinja2  bandpass.csd.jinja2  bandpass.json  bandpass_gain.csd.jinja2  bandpass_gain.json  base.csd.jinja2  base_effect.csd.jinja2  base_no_score.csd.jinja2  distortion.csd.jinja2  distortion.json  formant.csd.jinja2  formant.json  gain.csd.jinja2  gain.json  multipass.csd.jinja2  multipass.json  thru.json
rave/feature_extractors/: base_analyser.csd.jinja2  mel.csd.jinja2  mel.json  mfcc.csd.jinja2  mfcc.globals.csd.jinja2  mfcc.json  pitch.csd.jinja2  (+6 more)
tests/: test_analyser.py  test_effect.py  test_env.py  test_live.py  test_metrics.py  test_sound.py  test_standardizer.py
(+6 files in other folders)
