[tool.poetry]
name = "rave"
version = "0.1.0"
description = "Cross adaptive processing with reinforcement learning"
authors = ["ulrikah <ulrikhalmoy@gmail.com>"]

[tool.poetry.scripts]
effect = "rave.effect:main"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
librosa = "^0.8.0"
matplotlib = "^3.3.3"
ctcsound = "^6.14.2"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
