[tool.poetry]
name = "rave"
version = "0.1.0"
description = "Cross adaptive audio effects with reinforcement learning"
authors = ["ulrikah <ulrikhalmoy@gmail.com>"]

[tool.taskipy.tasks]
test = "pytest tests --disable-warnings"

[tool.poetry.dependencies]
python = "3.7.8"
numpy = "^1.19.5"
librosa = "^0.8.0"
matplotlib = "^3.3.3"
ctcsound = "^6.14.2"
Jinja2 = "^2.11.2"
python-osc = "^1.7.4"
gym = "^0.18.0"
torch = "^1.7.1"
ray = {extras = ["rllib"], version = "^1.1.0"}
aiohttp = "3.7.3"
scipy = "^1.6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.7"
tensorboard = "^2.4.1"
black = "^20.8b1"
pytest = "^6.2.2"
taskipy = "^1.6.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
